# mojitonpp

./: CMakeLists.txt  README.md  main.cpp  mojitonpp.hpp  vcpkg-configuration.json  vcpkg.json
test/: CMakeLists.txt  test_sequence_detector.cpp
